fix: Correct alignment property in multiple SCSS files

--- a/src/app/pages/admin-resoluciones/expedir-vinculacion/expedir-vinculacion.component.scss
+++ b/src/app/pages/admin-resoluciones/expedir-vinculacion/expedir-vinculacion.component.scss
@@ -52,7 +52,7 @@
 
 .form-field-date {
     display: flex;
-    align-items: flex-flex-start;
+    align-items: flex-start;;
 }
 
 .tooltip-container {
