--- a/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.scss
+++ b/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.scss
@@ -41,7 +41,7 @@
 
 .form-field-date {
     display: flex;
-    align-items: flex-flex-start;
+    align-items: flex-start;;
 }
 
 @media screen and (max-width: 1024px) {
