--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,7 +91,7 @@ mat-label {
 
 .mat-grid-tile-content {
   flex-wrap: wrap;
-  align-content: flex-flex-start;
+  align-content: flex-start;;
 }
 
 .section-title {
